fixed whitespace on right of app

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -15,7 +15,7 @@ h1 {
 }
 
 .App > div {
-  margin: 10px;
+  margin: 10px 0;
 }
 
 code {
